# jeccy_chain

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README.zh-cn.md  TODO.md
src/: lib.rs
src/block/: TODO.md  mod.rs
src/consensus/: TODO.md  mod.rs
src/crypto/: TODO.md  mod.rs
src/storage/: TODO.md  mod.rs
