[package]
name = "jeccy_chain"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
# Polkadot SDK 依赖
sc-service = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
parity-scale-codec = { version = "3.6", default-features = false, features = ["derive"] }
scale-info = { version = "2.10", default-features = false, features = ["derive"] }

# 常用工具依赖
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_arrays = "0.1"
log = { workspace = true }
env_logger = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
